# Unique

./: .gitignore  .travis.yml  LICENSE  README.md  Unique.cabal
.github/workflows/: haskell-ci.yml
Data/List/: Unique.hs  UniqueStrict.hs  UniqueUnsorted.hs
bench/: Main.hs
tests/: AllUnique.hs  Complex.hs  IsUnique.hs  Main.hs  RepeatedBy.hs  SortUniq.hs
tests/Unique/: AllUnique.hs  Complex.hs  IsUnique.hs  RepeatedBy.hs  SortUniq.hs
tests/UniqueStrict/: AllUnique.hs  IsUnique.hs  RepeatedBy.hs  SortUniq.hs
tests/UniqueUnsorted/: AllUnique.hs  IsUnique.hs  RemoveDuplicates.hs  RepeatedBy.hs
