name:                Unique

version:             0.4.7.1

synopsis:            It provides the functionality like unix "uniq" utility
description:         Library provides the functions to find unique and duplicate elements in the list
license:             BSD3
license-file:        LICENSE
author:              Volodymyr Yashchenko
maintainer:          ualinuxcn@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
   type:             git
   location:         https://github.com/kapralVV/Unique

library
  exposed-modules:      Data.List.Unique,
                        Data.List.UniqueStrict,
                        Data.List.UniqueUnsorted

  build-depends:         base                 >= 4.0 && < 4.11
                       , containers           >= 0.5.10 && < 0.6
                       , extra                >= 1.6.2 && < 1.7
                       , hashable             >= 1.2.6 && < 1.3
                       , unordered-containers >= 0.2.8 && < 0.3

  default-language:    Haskell2010
  ghc-options:         -Wall -O2


Test-Suite HspecTest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       Complex
                     , IsUnique
                     , RepeatedBy
                     , SortUniq
                     , AllUnique

  build-depends:       base          >= 4.0 && < 4.11
                     , hspec
                     , containers    >= 0.5.10 && < 0.6
                     , QuickCheck
                     , Unique

  default-language:    Haskell2010
  ghc-options:        -Wall -O2
                     