name:                Unique

version:             0.4.7.2

synopsis:            It provides the functionality like unix "uniq" utility
description:         Library provides the functions to find unique and duplicate elements in the list
license:             BSD3
license-file:        LICENSE
author:              Volodymyr Yashchenko
maintainer:          ualinuxcn@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:    GHC == 8.2
              , GHC == 8.0
              , GHC == 7.8
              , GHC == 7.6
              , GHC == 7.4

source-repository head
   type:             git
   location:         https://github.com/kapralVV/Unique.git

library
  exposed-modules:      Data.List.Unique,
                        Data.List.UniqueStrict,
                        Data.List.UniqueUnsorted

  build-depends:         base                 >= 4.0 && < 4.11
                       , containers           >= 0.5.5 && < 0.6
                       , extra                >= 1.6.2 && < 1.7
                       , hashable             >= 1.2.6 && < 1.3
                       , unordered-containers >= 0.2.8 && < 0.3

  default-language:    Haskell2010
  ghc-options:         -Wall


Test-Suite HspecTest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs

  other-modules:       Unique.Complex
                     , Unique.IsUnique
                     , Unique.RepeatedBy
                     , Unique.SortUniq
                     , Unique.AllUnique
                     , UniqueStrict.IsUnique
                     , UniqueStrict.RepeatedBy
                     , UniqueStrict.SortUniq
                     , UniqueStrict.AllUnique
                     , UniqueUnsorted.IsUnique
                     , UniqueUnsorted.RemoveDuplicates
                     , UniqueUnsorted.RepeatedBy
                     , UniqueUnsorted.AllUnique
                     

  build-depends:       base          >= 4.0 && < 4.11
                     , hspec
                     , containers    >= 0.5.5 && < 0.6
                     , QuickCheck
                     , Unique

  default-language:    Haskell2010
  ghc-options:        -Wall

Benchmark Criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs

  build-depends:       base          >= 4.0 && < 4.11
                     , Unique
                     , criterion
                     , QuickCheck
                     , quickcheck-instances
                     , bytestring
                     , hashable

  default-language:    Haskell2010
  ghc-options:        -Wall -rtsopts
